fix: Update dropdown spacing to fit with UI specifications

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -60,7 +60,7 @@
 }
 
 [role=banner] .coz-nav-pop-content .coz-nav-group {
-  padding: 0;
+  padding: 8px 0 8px 0;;
   margin: 0;
 }
 
